Fixing overlapping thumbnail image background on ring pages

--- a/sites/all/themes/trf/sass/modules/rings/_images.scss
+++ b/sites/all/themes/trf/sass/modules/rings/_images.scss
@@ -20,6 +20,9 @@
   }
 
   // Thumbnail wrapper
+  #imagezoom-thumb-wrapper {
+    width: $imagestyle-product_thumbnail;
+  }
   .imagezoom-thumbs {
     margin: 0;
     padding: 0;
